sumo/tests/netconvert/errors/false_output/errors.netconvert
Error: Could not build output file 'output/net.net.xml'.
Quitting (on error).
